model loading constant flag

--- a/dino-ai.ipynb
+++ b/dino-ai.ipynb
@@ -87,14 +87,18 @@
     "DOWN_ACTION = 'down'\n",
     "NO_OP_ACTION = 'no_op'\n",
     "GAME_OVER_POSSIBLE_STRING_DETECTIONS = ['GAME', 'GAHE']\n",
+    "\n",
     "CHECKPOINT_DIR = './train/'\n",
     "LOG_DIR = './logs/'\n",
-    "CALLBACK_CHECK_FREQ = 8000\n",
+    "CALLBACK_CHECK_FREQ = 10000\n",
     "VERBOSE = 1\n",
+    "\n",
     "DQN_POLICY = 'CnnPolicy'\n",
     "DQN_BUFFER_SIZE = 10000\n",
-    "DQN_LEARNING_STARTS = 880\n",
-    "DQN_TOTAL_TIMESTEPS = 88000"
+    "DQN_LEARNING_STARTS = 1000\n",
+    "DQN_TOTAL_TIMESTEPS = 200000\n",
+    "DQN_BEST_MODEL_PATH = 'best_model.zip'\n",
+    "DQN_LOAD_MODEL = True"
    ]
   },
   {
@@ -118,7 +122,7 @@
     "        self.action_space = Discrete(3)\n",
     "\n",
     "        self.cap = mss()\n",
-    "        self.game_location = {'top': 300, 'left': 0, 'width': 900, 'height': 500}\n",
+    "        self.game_location = {'top': 300, 'left': 0, 'width': 600, 'height': 500}\n",
     "        self.game_over_location = {'top': 405, 'left': 630, 'width': 660, 'height': 70}\n",
     "\n",
     "    def step(self, action):\n",
@@ -135,7 +139,7 @@
     "        new_observation = self.get_observation()\n",
     "\n",
     "        reward = 1\n",
-    "        truncated = None \n",
+    "        truncated = None\n",
     "        info = {}\n",
     "\n",
     "        return new_observation, reward, game_over, truncated, info\n",
@@ -147,7 +151,7 @@
     "\n",
     "    def close_observation(self):\n",
     "        cv2.destroyAllWindows()\n",
-    "\n",
+    "  \n",
     "    def reset(self, seed=None):\n",
     "        time.sleep(2)\n",
     "        pydirectinput.press('space')\n",
@@ -224,27 +228,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#model = DQN(DQN_POLICY, env, tensorboard_log = LOG_DIR, verbose=VERBOSE, buffer_size=DQN_BUFFER_SIZE, learning_starts=DQN_LEARNING_STARTS)\n",
-    "# model = DQN.load('best_model.zip', env=env)\n",
-    "# model.learn(total_timesteps=DQN_TOTAL_TIMESTEPS, callback=callback)  \n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# for episode in range(3):\n",
-    "#     obs, _ = env.reset()\n",
-    "#     game_over = False\n",
-    "#     total_reward = 0\n",
+    "model = None\n",
     "\n",
-    "#     while not game_over:\n",
-    "#         action, _ = model.predict(obs[0], deterministic=True)\n",
-    "#         obs, reward, game_over, truncated, info = env.step(int(action))\n",
-    "#         total_reward += reward\n",
-    "#     print(f'Total Reward for episode {episode} is {total_reward}')"
+    "if DQN_LOAD_MODEL is True:\n",
+    "    model = DQN.load(DQN_BEST_MODEL_PATH, env=env)\n",
+    "     \n",
+    "else:\n",
+    "    model = DQN(DQN_POLICY, env, tensorboard_log = LOG_DIR, verbose=VERBOSE, buffer_size=DQN_BUFFER_SIZE, learning_starts=DQN_LEARNING_STARTS)\n",
+    "\n",
+    "model.learn(total_timesteps=DQN_TOTAL_TIMESTEPS, callback=callback) \n",
+    "  "
    ]
   }
  ],
