space constant adjustment

--- a/dino-ai.ipynb
+++ b/dino-ai.ipynb
@@ -145,7 +145,7 @@
     "        return new_observation, reward, game_over, truncated, info\n",
     "\n",
     "    def render(self):\n",
-    "        cv2.imshow(\"Game\", np.array(self.cap.grab(self.game_location)))[:,:,:3]\n",
+    "        cv2.imshow(\"\", np.array(self.cap.grab(self.game_location)))[:,:,:3]\n",
     "        if cv2.waitKey(1) & 0xFF == ord('q'):\n",
     "            self.close_observation\n",
     "\n",
@@ -154,7 +154,7 @@
     "  \n",
     "    def reset(self, seed=None):\n",
     "        time.sleep(2)\n",
-    "        pydirectinput.press('space')\n",
+    "        pydirectinput.press(SPACE_ACTION)\n",
     "        return self.get_observation(), seed\n",
     "\n",
     "    def get_observation(self):\n",
@@ -207,7 +207,7 @@
     "    \n",
     "    def _on_step(self):\n",
     "        if self.n_calls % self.check_freq == 0:\n",
-    "            model_path = os.path.join(self.save_path, 'best_model{}'.format(self.n_calls))\n",
+    "            model_path = os.path.join(self.save_path, '{}'.format(self.n_calls))\n",
     "            self.model.save(model_path)\n",
     "\n",
     "        return True\n",
