minor adjustments. still going to be tested

--- a/dino-ai.ipynb
+++ b/dino-ai.ipynb
@@ -129,20 +129,20 @@
     "        action_map = {\n",
     "            0: SPACE_ACTION,\n",
     "            1: DOWN_ACTION,\n",
-    "            2: GAME_OVER_POSSIBLE_STRING_DETECTIONS\n",
+    "            2: NO_OP_ACTION\n",
     "        }\n",
     "\n",
     "        if action != 2:\n",
     "            pydirectinput.press(action_map[action])\n",
     "        \n",
-    "        game_over = self.get_game_over()\n",
+    "        done = self.get_game_over()\n",
     "        new_observation = self.get_observation()\n",
     "\n",
     "        reward = 1\n",
     "        truncated = None\n",
     "        info = {}\n",
     "\n",
-    "        return new_observation, reward, game_over, truncated, info\n",
+    "        return new_observation, reward, done, truncated, info\n",
     "\n",
     "    def render(self):\n",
     "        cv2.imshow(\"\", np.array(self.cap.grab(self.game_location)))[:,:,:3]\n",
